src/objects/AudienceUser__c.object
<CustomObject>
    <description>Relationship between Users and Navigation variants. You can view the specific user for an specific audience for access to the community preview.</description>
    <fields>
        <fullName>Audience__c</fullName>
        <label>Audience</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cluster</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Cluster__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ClusterRoot</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipName>Audienceusers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>Autocompleted/editable field based on Name and External Id for import/export purposes.</description>
        <externalId>true</externalId>
        <inlineHelpText>Autocompleted/editable field based on Name and External Id for import/export purposes.</inlineHelpText>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Audience_users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Audience User</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Audience user Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audience Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>